--- a/experience.html
+++ b/experience.html
@@ -5,35 +5,40 @@
   <title>Trevor Woodman's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet"></head>
   <body>
 
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Trevor Woodman</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="experience.html">Experience</a></li>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="experience.html">EXPERIENCE</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.jpg" alt="image of myself, trevor woodman" class="profile-image">
-      <h1 class="tag name">Hey, I'm Trevor</h1>
+      <img src="images/me.jpg" alt="image of trevor woodman" class="profile-image">
+      <h1 class="tag name">Hey, I'm Trevor!</h1>
       <p class="tag location">I live in Northwest Territories, Canada<br>Here's some stuff I'm working on.</p>
     </header>
 
-    <div class="grid">
-      <div class="cell">
-        <img src="images/woodman.png">
-        <p>PERSONAL SITE</p>
+    <main>
+      <div class="grid">
+        <div class="cell">
+          <img src="images/woodman.png" alt="thumbnail of my personal site">
+          <div class="celloverlay">
+            <p>PERSONAL SITE</p>
+          </div>
+        </div>
+        <div class="cell">
+          <img src="images/bitforge.png" alt="thumbnail of a project called bitforge">
+          <div class="celloverlay">
+            <p>WIP PROJECT</p>
+          </div>
+        </div>
       </div>
-      <div class="cell">
-        <img src="images/bitforge.png">
-        <p>WIP PROJECT</p>
-      </div>
-    </grid>
-
     </main>
+
     <footer>
       <ul>
         <li><a href="https://twitter.com/realwoodman" class="social twitter">Twitter</a></li>
