--- a/index.html
+++ b/index.html
@@ -5,33 +5,33 @@
   <title>Trevor Woodman's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet"></head>
   <body>
 
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Trevor Woodman</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="experience.html">Experience</a></li>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="experience.html">EXPERIENCE</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.jpg" alt="image of myself, trevor woodman" class="profile-image">
-      <h1 class="tag name">Hey, I'm Trevor</h1>
+      <img src="images/me.jpg" alt="image of trevor woodman" class="profile-image">
+      <h1 class="tag name">Hey, I'm Trevor!</h1>
       <p class="tag location">I live in Northwest Territories, Canada</p>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>A Bit About Me</h2>
+        <h2>A bit about me</h2>
         <p>After finally having enough of the security business, I decided to work on becoming a web developer. I've been learning fairly steadily for about a year now, and I feel I'm ready to get some sort of tangible document to show how dedicated I am.</p>
         <p>In addition to coding, I also like cooking and playing space games.</p>
       </div>
 
       <div class="card">
-        <h2>What I Want To Perfect</h2>
-        <p></p>
+        <h2>What I wanna do</h2>
+        <p>Be super awesome at these:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
@@ -41,10 +41,19 @@
           <li>Rails</li>
           <li>PHP</li>
         </ul>
+        <p>Be hired by some place like this:</p>
         <p>My dream would be to work for a video game company on their web side, because I really enjoy video games and appreciate the people that make them.</p>
       </div>
 
     </main>
+
+    <section class="clearfix">
+      <div class="stretch">
+        <h3>What I want to do with my life, short version.</h3>
+        <p>Get an awesome job (almost anywhere in the world, I'll learn a new language if I have to), work with awesome people, and make awesome stuff.</p>
+      </div>
+    </section>
+
     <footer>
       <ul>
         <li><a href="https://twitter.com/realwoodman" class="social twitter">Twitter</a></li>
