add links to cell item overlays

--- a/experience.html
+++ b/experience.html
@@ -26,15 +26,19 @@
       <div class="grid">
         <div class="cell">
           <img src="images/woodman.png" alt="thumbnail of my personal site">
-          <div class="celloverlay">
+          <a href="http://trevorwoodman.me">
+            <div class="celloverlay">
             <p>PERSONAL SITE</p>
           </div>
+        </a>
         </div>
         <div class="cell">
           <img src="images/bitforge.png" alt="thumbnail of a project called bitforge">
-          <div class="celloverlay">
-            <p>WIP PROJECT</p>
-          </div>
+          <a href="http://bitforge.xyz">
+            <div class="celloverlay">
+              <p>WIP PROJECT</p>
+            </div>
+          </a>
         </div>
       </div>
     </main>
