update project to use Darth Vader and related themes

--- a/experience.html
+++ b/experience.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Trevor Woodman's Profile</title>
+  <title>Darth Vader's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet"></head>
@@ -10,7 +10,7 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Trevor Woodman</li>
+          <li class="name">Darth Vader</li>
           <li><a href="index.html">HOME</a></li>
           <li><a href="experience.html">EXPERIENCE</a></li>
         </ul>
@@ -18,23 +18,23 @@
 
     <header>
       <img src="images/me.jpg" alt="image of trevor woodman" class="profile-image">
-      <h1 class="tag name">Hey, I'm Trevor!</h1>
-      <p class="tag location">I live in Northwest Territories, Canada<br>Here's some stuff I'm working on.</p>
+      <h1 class="tag name">I am Vader</h1>
+      <p class="tag location">Supreme Commander of the Imperial Fleet<br>Here's some stuff I'm working on.</p>
     </header>
 
     <main>
       <div class="grid">
         <div class="cell">
-          <img src="images/woodman.png" alt="thumbnail of my personal site">
-          <a href="http://trevorwoodman.me">
+          <img src="images/proj1.png" alt="a picture of some sass code">
+          <a href="#">
             <div class="celloverlay">
-            <p>PERSONAL SITE</p>
+            <p>CODECODECODE</p>
           </div>
         </a>
         </div>
         <div class="cell">
-          <img src="images/bitforge.png" alt="thumbnail of a project called bitforge">
-          <a href="http://bitforge.xyz">
+          <img src="images/proj2.png" alt="another picture of code this time of javascript">
+          <a href="#">
             <div class="celloverlay">
               <p>WIP PROJECT</p>
             </div>
