--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Trevor Woodman's Profile</title>
+  <title>Darth Vader's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet"></head>
@@ -10,28 +10,28 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Trevor Woodman</li>
+          <li class="name">Darth Vader</li>
           <li><a href="index.html">HOME</a></li>
           <li><a href="experience.html">EXPERIENCE</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.jpg" alt="image of trevor woodman" class="profile-image">
-      <h1 class="tag name">Hey, I'm Trevor!</h1>
-      <p class="tag location">I live in Northwest Territories, Canada</p>
+      <img src="images/me.jpg" alt="image of darth vader" class="profile-image">
+      <h1 class="tag name">I am Vader</h1>
+      <p class="tag location">Supreme Commander of the Imperial Fleet</p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>A bit about me</h2>
-        <p>After finally having enough of the security business, I decided to work on becoming a web developer. I've been learning fairly steadily for about a year now, and I feel I'm ready to get some sort of tangible document to show how dedicated I am.</p>
+        <p>Serving the Empire faithfully for many years is tiring and I have decided to take up web development.</p>
         <p>In addition to coding, I also like cooking and playing space games.</p>
       </div>
 
       <div class="card">
-        <h2>What I wanna do</h2>
-        <p>Be super awesome at these:</p>
+        <h2>Accomplish</h2>
+        <p>Become a master at:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
@@ -41,26 +41,25 @@
           <li>Rails</li>
           <li>PHP</li>
         </ul>
-        <p>Be hired by some place like this:</p>
-        <p>My dream would be to work for a video game company on their web side, because I really enjoy video games and appreciate the people that make them.</p>
+        <p>Work in the Death Star's dev shop.</p>
       </div>
 
     </main>
 
     <section class="clearfix">
       <div class="stretch">
-        <h3>What I want to do with my life, short version.</h3>
-        <p>Get an awesome job (almost anywhere in the world, I'll learn a new language if I have to), work with awesome people, and make awesome stuff.</p>
+        <h3>What I want to make:</h3>
+        <p>An impressive website for the Death Star.</p>
       </div>
     </section>
 
     <footer>
       <ul>
-        <li><a href="https://twitter.com/realwoodman" class="social twitter">Twitter</a></li>
-        <li><a href="https://ca.linkedin.com/in/trevor-woodman-355756a5" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/twoodman" class="social github">Github</a></li>
+        <li><a href="#" class="social twitter">Twitter</a></li>
+        <li><a href="#" class="social linkedin">LinkedIn</a></li>
+        <li><a href="#" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">&copy; Trevor Woodman 2016</p>
+      <p class="copyright">&copy; Darth Vader 2016</p>
     </footer>
   </body>
   </html>
