change PNGs to jpgs fix URls to imgs in experience.html

--- a/experience.html
+++ b/experience.html
@@ -25,7 +25,7 @@
     <main>
       <div class="grid">
         <div class="cell">
-          <img src="images/proj1.png" alt="a picture of some sass code">
+          <img src="images/proj1.jpg" alt="a picture of some sass code">
           <a href="#">
             <div class="celloverlay">
             <p>CODECODECODE</p>
@@ -33,7 +33,7 @@
         </a>
         </div>
         <div class="cell">
-          <img src="images/proj2.png" alt="another picture of code this time of javascript">
+          <img src="images/proj2.jpg" alt="another picture of code this time of javascript">
           <a href="#">
             <div class="celloverlay">
               <p>WIP PROJECT</p>
